<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- ACTIVITY MAIN -->
    <string name="app_name">Distance From Me</string>
    <string name="action_search">Search</string>
    <string name="action_social_share">Share</string>
    <string name="menu_legalnotices">Legal notices</string>
    <string name="search_hint">Search Distance From Me</string>
    <string name="searching">Searching</string>
    <string name="wait">Please wait</string>
    <string name="nofindaddress">No backend service available or very poor network signal. Try again in a while</string>
    <string name="noresults">No matches were found</string>
    <string name="loading">Searching your position. Please, wait</string>
    <string name="action_load">Load distance</string>
    <string name="gps_off">GPS disabled, would you like to enable it?</string>
    <string name="gps_enable">Enable GPS</string>
    <string name="do_nothing">Do nothing</string>
    <string name="wireless_off">No wireless or network connection available, would you like to enable?</string>
    <string name="wireless_enable">Enable</string>
    <string name="select_address">Select an address</string>
    <string name="list_dialog_title">Choose a distance</string>
    <string name="menu_rateapp">Rate app</string>
    <string name="rate_title">Rate this app</string>
    <string name="rate_message">If you enjoy using Distance From Me, please give 5 stars and write a nice comment. Anyway, you can also complain about any error or make a suggestion by sending an email to the dev team.</string>
    <string name="rate_positive_button">Go to Google Play Store</string>
    <string name="rate_negative_button">Complain!</string>
    <string name="complain_message">Complain/Suggestion about Distance From Me</string>
    <string name="complain_hint">I want to tell the dev team </string>
    <string name="complain_problem">There are no email clients installed</string>
    <string name="menu_settings">Settings</string>
    <string name="distances_deleted">Distances deleted</string>
    <string name="no_distances_registered">No distances saved</string>
    <string name="category_centre_title">Distance measure</string>
    <string name="dialog_title">Centre map</string>
    <string name="preference_centre_summary">Where pointing the map at distance measuring</string>
    <string name="mode_DES">Centre in destination</string>
    <string name="mode_CEN">Centre in the middle</string>
    <string name="category_db_title">Distance register</string>
    <string name="preference_db_title">Delete distances</string>
    <string name="preference_db_summary">Touch to delete all saved distances</string>
    <string name="elevation_profile">Elevation profile</string>
    <string name="preference_elevation_title">Show elevation profile</string>
    <string name="preference_elevation_summary">Calculates elevation profile. This task may take some time depending on your network.</string>
    

    
    <!-- ACTIVITY SHOINFO -->
    <string name="current">Current estimated position</string>
    <string name="destination">Estimated destination</string>
    <string name="noaddress">No address found for location</string>
    <string name="distance">Distance</string>
    <string name="menuitem_refresh">Refresh data</string>
    <string name="menu_guardar">Save</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="space">There are</string>
    <string name="nolocation">Error trying to get address. Use refresh button</string>
    <string name="nonetwork">Wireless connection failed. Turn on your wireless connection and try again refreshing</string>
    <string name="alias_dialog_title">Alias</string>
    <string name="alias_dialog_message">Assign an alias to this distance:</string>
    <string name="alias_dialog_accept">Accept</string>
    <string name="alias_dialog_toast_1">Distance \"</string>
    <string name="alias_dialog_toast_2">\" correctly saved</string>
    <string name="alias_dialog_toast_3">Distance correctly saved</string>

</resources>