<menu xmlns:actual="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        actual:actionViewClass="android.support.v7.widget.SearchView"
        actual:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_load"
        android:orderInCategory="2"
        android:title="@string/action_load"
        actual:showAsAction="never"/>
    <item
        android:id="@+id/menu_rateapp"
        android:orderInCategory="3"
        android:title="@string/menu_rateapp"
        actual:showAsAction="never"/>
    <item
        android:id="@+id/menu_legalnotices"
        android:orderInCategory="4"
        android:title="@string/menu_legalnotices"
        actual:showAsAction="never"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="5"
        android:title="@string/menu_settings"
        actual:showAsAction="never"/>
</menu>
