<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:actual="http://schemas.android.com/apk/res-auto" >
 
    <item
        android:id="@+id/action_search"
        actual:actionViewClass="android.support.v7.widget.SearchView"
        actual:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_load"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_collections_collection"
        actual:showAsAction="ifRoom|withText"
        android:title="@string/action_load"/>
    <item
        android:id="@+id/menu_legalnotices"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_legalnotices"/>
</menu>
