<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:actual="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_social_share"
        actual:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        actual:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_social_share"
        android:orderInCategory="1"
        android:title="@string/action_social_share"/>
    <item
        android:id="@+id/refresh"
        actual:showAsAction="ifRoom"
        android:alphabeticShortcut="r"
        android:icon="@drawable/ic_action_navigation_refresh"
        android:orderInCategory="2"
        android:title="@string/menuitem_refresh"/>
    <item
        android:id="@+id/menu_save"
        actual:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="3"
        android:title="@string/menu_guardar"/>

</menu>